--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,19 @@
 {
-  "name": "roots/bedrock",
+  "name": "Custom Wordpress Starter",
   "type": "project",
   "license": "MIT",
   "description": "A modern WordPress stack",
   "homepage": "http://roots.io/wordpress-stack/",
   "authors": [
     {
-      "name": "Scott Walkinshaw",
-      "email": "scott.walkinshaw@gmail.com",
-      "homepage": "https://github.com/swalkinshaw"
-    },
-    {
-      "name": "Ben Word",
-      "email": "ben@benword.com",
-      "homepage": "https://github.com/retlehs"
+      "name": "Shantanu Gautam",
+      "email": "gautam.s@me.com",
+      "homepage": "sgautam.info"
     }
   ],
   "keywords": [
     "wordpress", "stack", "capistrano", "composer", "vagrant", "wp"
   ],
-  "support": {
-    "issues": "https://github.com/roots/bedrock/issues",
-    "forum": "http://discourse.roots.io/category/bedrock"
-  },
   "config": {
     "preferred-install": "dist",
     "generate-salts": true
@@ -59,7 +50,13 @@
     "wordpress/wordpress": "4.0",
     "fancyguy/webroot-installer": "1.1.0",
     "composer/installers": "v1.0.12",
-    "vlucas/phpdotenv": "~1.0.6"
+    "vlucas/phpdotenv": "~1.0.6",
+    "wpackagist/advanced-custom-fields": "*",
+    "wpackagist/amazon-web-services": "*",
+    "wpackagist/amazon-s3-and-cloudfront": "*",
+    "wpackagist/google-xml-sitemap": "*",
+    "wpackagist/disable-comments": "*",
+    "wpackagist/json-api": "*",
   },
   "extra": {
     "installer-paths": {
@@ -67,7 +64,12 @@
       "web/app/plugins/{$name}/": ["type:wordpress-plugin"],
       "web/app/themes/{$name}/": ["type:wordpress-theme"]
     },
-    "webroot-dir": "web/wp",
+    "webroot-dir": "web/page",
     "webroot-package": "wordpress/wordpress"
-  }
+  },
+    "scripts": {
+        "post-update-cmd": [
+            "cd web/app/themes && git clone https://github.com/shantanugautam/wp-gulp-theme.git mmw"
+        ]
+    }
 }
